--- a/app/app/src/App.module.css
+++ b/app/app/src/App.module.css
@@ -1,10 +1,25 @@
 .app {
-    background-color: white;
     width: 100%;
     height: 100%;
+    display: flex;
+    -webkit-app-region: drag;
+    padding: 8px;
+}
+
+.menu {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    -webkit-app-region: drag;
+    margin: 8px;
+    gap: 8px;
+    -webkit-app-region: no-drag;
+}
+.leftSpace {
+    width: 240px;
+    height: 100%;
+    background: #f0f0f0;
+    border-radius: 8px;
+    margin-right: 16px;
+    -webkit-app-region: no-drag;
 }
