--- a/app/app/src/App.module.css
+++ b/app/app/src/App.module.css
@@ -1,25 +1,35 @@
 .app {
-    width: 100%;
     height: 100%;
-    display: flex;
-    -webkit-app-region: drag;
-    padding: 8px;
+    width: 100%;
 }
 
-.menu {
+.menuContainer {
+    -webkit-app-region: drag;
+    height: 100%;
+    width: 64px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 8px;
-    gap: 8px;
-    -webkit-app-region: no-drag;
+    background-color: white;
 }
+
 .leftSpace {
-    width: 240px;
     height: 100%;
-    background: #f0f0f0;
-    border-radius: 8px;
-    margin-right: 16px;
+    width: calc(100% - 64px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    padding: 8px;
+    transition: width 0.3s;
+}
+
+button {
     -webkit-app-region: no-drag;
 }
