--- a/app/app/src/App.module.css
+++ b/app/app/src/App.module.css
@@ -4,30 +4,16 @@
 }
 
 .menuContainer {
-    -webkit-app-region: drag;
-    height: 100%;
-    width: 64px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    height: 48px;
+    width: 100%;
     background-color: white;
+    -webkit-app-region: drag;
 }
 
-.leftSpace {
+.bottomSpace {
     height: 100%;
-    width: calc(100% - 64px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: white;
-    padding: 8px;
-    transition: width 0.3s;
+    width: 100%;
+    background: #f0f0f0;
 }
 
 button {
