--- a/app/app/src/Menu.module.css
+++ b/app/app/src/Menu.module.css
@@ -1,8 +1,8 @@
 .menu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: start;
     align-items: center;
-    justify-content: flex-start;
     gap: 8px;
     height: 100%;
     width: 100%;
