--- a/app/app/src/index.css
+++ b/app/app/src/index.css
@@ -1,13 +1,12 @@
 @import "tailwindcss";
 
 body {
-    margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: white;
+    overflow-x: hidden;
 }
 
 code {
@@ -18,8 +17,4 @@ code {
 #root {
     height: 100vh;
     width: 100vw;
-    background-color: white;
-    padding: 0;
-    margin: 0;
-    border-radius: 16px;
 }
