--- a/app/app/src/App.module.css
+++ b/app/app/src/App.module.css
@@ -7,13 +7,13 @@
     height: 48px;
     width: 100%;
     background-color: white;
-    -webkit-app-region: drag;
 }
 
 .bottomSpace {
     height: 100%;
     width: 100%;
-    background: #f0f0f0;
+    -webkit-app-region: drag;
+    padding: 8px 8px;
 }
 
 button {
