--- a/app/app/src/App.module.css
+++ b/app/app/src/App.module.css
@@ -12,8 +12,12 @@
 .bottomSpace {
     height: 100%;
     width: 100%;
-    -webkit-app-region: drag;
-    padding: 8px 8px;
+    -webkit-app-region: no-drag;
+    padding: 8px 16px;
+    background-color: white;
+    transition: height 0.3s ease-in-out;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 button {
