--- a/app/app/src/spaces/voice.module.css
+++ b/app/app/src/spaces/voice.module.css
@@ -2,12 +2,41 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    height: 100%;
+    width: 100%;
 }
 
 .voiceBar {
     display: flex;
     justify-content: start;
     align-items: center;
+    gap: 8px;
+}
+
+.startButton {
+    background: #000;
+    color: #fff;
+    transition: background 0.15s;
+    border-radius: 0.5rem;
+    font-weight: 500;
+    width: 40%;
+}
+
+.startButton:hover {
+    background: #222;
+}
+
+.stopButton {
+    background: #ef4444;
+    color: #fff;
+    transition: background 0.15s;
+    border-radius: 0.5rem;
+    font-weight: 500;
+    width: 40%;
+}
+
+.stopButton:hover {
+    background: #f87171;
 }
 
 .voiceText {
@@ -19,4 +48,20 @@
     font-size: 14px;
     color: #666;
     margin: 0;
+}
+
+.selectContent {
+    max-height: 5rem;
+    overflow-y: auto;
+}
+
+.selectAudioDevice {
+    width: 100%;
+    -webkit-app-region: no-drag;
+}
+
+.conversation {
+    height: 100%;
+    width: 100%;
+    background-color: #f0f0f0;
 }
