--- a/client/app/src/routes/taskBoardPage.module.css
+++ b/client/app/src/routes/taskBoardPage.module.css
@@ -1,9 +1,14 @@
 .taskBoardPage {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   -webkit-app-region: drag;
+
 }
 
 button {
+  -webkit-app-region: no-drag;
+}
+
+.kanban {
   -webkit-app-region: no-drag;
 }
